[package]
name = "pom"
version = "3.0.2"
edition = "2018"
authors = ["Junfeng Liu <china.liujunfeng@gmail.com>"]
homepage = "https://github.com/J-F-Liu/pom"
documentation = "https://docs.rs/crate/pom/"
repository = "https://github.com/J-F-Liu/pom.git"
license = "MIT"
readme = "README.md"
description = "PEG parser combinators using operator overloading without macros."
categories = ["parsing"]
keywords = ["parser", "parser-combinators", "parsing", "PEG"]

[badges]
travis-ci = { repository = "J-F-Liu/pom" }
