[package]
name = "pom"
version = "3.4.1"
edition = "2021"
authors = ["Junfeng Liu <china.liujunfeng@gmail.com>"]
homepage = "https://github.com/J-F-Liu/pom"
documentation = "https://docs.rs/crate/pom/"
repository = "https://github.com/J-F-Liu/pom.git"
license = "MIT"
readme = "README.md"
description = "PEG parser combinators using operator overloading without macros."
categories = ["parsing"]
keywords = ["parser", "parser-combinators", "parsing", "PEG"]

[badges]
travis-ci = { repository = "J-F-Liu/pom" }

[dependencies]
bstr = { version = "1.1.0", features = [
] } # Only uses one function, so no features needed.

[features]
default = ["utf8"]
utf8 = []
trace = []
